# llm_json_utils

./: Cargo.toml  README.md  README.zh-CN.md  json_repair_rust.pyi  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/: lib.rs
src/repair/: mod.rs
tests/: integration_test.rs
tests/failure/repair/: missing_colon.txt  unquoted_key.txt  unquoted_keys.txt
tests/success/repair/: prefix_extraction.txt  python_literals.txt
